flash error messages

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -3,6 +3,7 @@
 <h2><%= activity.label%></h2>
 <h4><%= activity.time_display %></h4>
 <%=link_to "New Entry", new_activity_entry_path(activity.id)  %>
+<%=link_to "Delete Activity", activity, :method => :delete %>
 <table>
 <tr>
 <th>Date</th>
