--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: [:activity, @entry] do |f| %>
+  <%= render "shared/errors" if @entry.errors.any? %>
   <%= label_tag(:from_time, "From") %>
   <%= f.time_field :from_time %>
   <% p params %>
