--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: @activity do |f| %>
+ <%= label_tag(:label, "Label") %>
   <%= f.text_field :label %>
   <%= f.submit "Create" %>
 <% end %>
