add index style

--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,12 @@
-<%= form_with model: @activity do |f| %>
+<div class="container">
+<div class="d-flex justify-content-center">
+<h1>New Activity</h1>
+</div>
+<%= form_with model: @activity, class: "d-flex flex-column" do |f| %>
+<div class="form-group">
  <%= label_tag(:label, "Label") %>
-  <%= f.text_field :label %>
-  <%= f.submit "Create" %>
+  <%= f.text_field :label, {:class => "form-control"} %>
+  </div>
+  <%= f.submit "Create", {:class => "btn btn-success"} %>
 <% end %>
+</div>
