--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,10 +1,17 @@
+<div class="d-flex justify-content-center">
 <h1>Your Activities</h1>
+</div>
+<div class="container">
 <% @activities && @activities.each do |activity|%>
-<h2><%= activity.label%></h2>
-<h4><%= activity.time_display %></h4>
-<%=link_to "New Entry", new_activity_entry_path(activity.id)  %>
-<%=link_to "Delete Activity", activity, :method => :delete %>
-<table class="table">
+<div class="d-flex justify-content-between align-items-center">
+<h3><%= activity.label%></h3>
+<div>
+<%=link_to "New Entry", new_activity_entry_path(activity.id), class: "btn btn-info btn-sm"  %>
+<%=link_to "Delete Activity", activity, :method => :delete, class: "btn btn-danger btn-sm" %>
+</div>
+</div>
+<p><%= activity.time_display %></p>
+<table class="table table-striped">
 <thead>
 <tr>
 <th scope="col">Date</th>
@@ -17,9 +24,10 @@
  <tr>
  <th scope="row"><%=entry.date%></th>
  <td><%="#{entry.hours}H #{entry.minutes}M"%></td>
- <td><%=link_to "Delete", entry, :method => :delete %></td>
+ <td><%=link_to "Delete", entry, :method => :delete, class: "btn btn-outline-warning btn-sm" %></td>
  </tr>
 <%end%>
 </tbody>
 </table>
 <%end%>
+</div>
