--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,26 @@
-<nav>
-<%= link_to "Log In", new_user_session_path if !user_signed_in?%>
-<%= link_to "Sign Up", new_user_registration_path if !user_signed_in?%>
-<%= link_to "Log out", destroy_user_session_path, :method => :delete if user_signed_in?%>
-<%= link_to "New Activity", new_activity_path if user_signed_in?%>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <%= link_to "Activity Tracker", root_path, class: "navbar-brand"%>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <%= link_to "Log In", new_user_session_path, class: "nav-link" if !user_signed_in?%><span class="sr-only">(current)</span>
+      </li>
+
+      <li class="nav-item">
+      <%= link_to "New Activity", new_activity_path, class: "nav-link active" if user_signed_in?%>
+      </li>
+
+      <li class="nav-item">
+       <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" if !user_signed_in?%>
+      </li>
+
+      <li class="nav-item">
+       <%= link_to "Log out", destroy_user_session_path, :method => :delete, class: "nav-link" if user_signed_in?%>
+      </li>
+    </ul>
+  </div>
 </nav>
