--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,12 +1,11 @@
-<div class="container">
-<div class="d-flex justify-content-center">
-<h1>New Activity</h1>
-</div>
-<%= form_with model: @activity, class: "d-flex flex-column" do |f| %>
-<div class="form-group">
- <%= label_tag(:label, "Label") %>
-  <%= f.text_field :label, {:class => "form-control"} %>
+<div class="container d-flex flex-column align-items-center">
+  <div class="d-flex justify-content-center">
+    <h2>New Activity</h2>
   </div>
-  <%= f.submit "Create", {:class => "btn btn-success"} %>
-<% end %>
+  <%= form_with model: @activity, class: "d-flex flex-column" do |f| %>
+  <div class="form-group">
+    <%= label_tag(:label, "Label") %> <%= f.text_field :label, {:class =>
+    "form-control"} %>
+  </div>
+  <%= f.submit "Create", {:class => "btn btn-success"} %> <% end %>
 </div>
